// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Variants component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Variant
      </label>
      <Dropzone
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
              >
                Upload a file
              </span>
               or
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </Dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Variant
      </label>
      <Dropzone
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
              >
                Upload a file
              </span>
               or
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </Dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is image renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        High Resolution Image
      </label>
      <Dropzone
        accept="image/*"
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
              >
                Upload a file
              </span>
               or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
      </Dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Thumbnail Image
      </label>
      <Dropzone
        accept="image/*"
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
              >
                Upload a file
              </span>
               or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
      </Dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is pdf renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Thumbnail Image
      </label>
      <Dropzone
        accept="image/*"
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
              >
                Upload a file
              </span>
               or
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              jpeg, tiff, gif, png
            </p>
          </div>
        </div>
      </Dropzone>
    </div>
  </div>
</div>
`;
